--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "3era-pre-entrega-centorbi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
